2.7.3
-----
1. If have entry without an icon don't allow grid usage.
2. Don't play/pause if press 'space' whilst typing to jump to list entry.
3. Correctly handle 'nextWindow' when browsing if no items are returned.

2.7.2
-----
1. Translation updates.
2. When replacing strings in custom actions replace all occurances.
3. Handle 'nextWindow' when browsing if no items are returned.
4. Update Roboto fonts.
5. Allow multiple characters when jumping in list via keypress.

2.7.1
-----
1. Translation updates.
2. Remove any leading slash from xxx_svg.png paths.
3. Add custom actions to context menus.
4. Allow adding custom actions to album track, queue, playlist, and playlist
   tracks' context menus (use "album-track", "queue-track", "playlist", or
   "playlist-track" as section in JSON file).
5. Allow replacing "$IMAGE" with item's image URL in custom actions.
6. Fix "lmscommand" custom actions.
7. Fix RadioNet icon mapping.

2.7.0
-----
 1. Media keys support.
 2. Remove podcast search, etc, as LMS now provides its own.
 3. Allow configuring of web-app display setting.
 4. Extend custom actions to allow invoking JSONRPC commands.
 5. Add custom action support for genre and year listings.
 6. Allow hiding of LSM settings sections via 'hideSettings' within server-side
    preference file. e.g. set "hideSettings: 'mediadirs1'" in
    "prefs/plugin/material-skin.prefs" will cause media dirs section to be
    hidden.
 7. Dont add resize parameters to plugin image URLs.
 8. Allow alert notifications to be canceled.
 9. Add custom update notifications.
10. Hide playlists from online services from 'Add to playlist' and 'Save play
    queue' dialogs.
11. If have playlists from online services, then use the service's logo as an
    icon for online playlists and a list icon for LMS playlists.
12. Allow info and error notifications to be client specific - so will only show
    if Material's active player ID matches that supplied.
13. Fix downloading playlist.